--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,6 @@ packages/vaex-core/vaex/*.*-win_amd64.pyd
 
 # ASV environment, results database (JSON) and generated HTML static files
 .asv/
+
+# output file from the docs
+docs/source/data/io/output*
